bio redrafted robots.txt enabled

--- a/public/bio/index.html
+++ b/public/bio/index.html
@@ -88,18 +88,19 @@
 
 <h2 id="education">Education</h2>
 
-<h4 id="bsc-in-corporate-finance">BSc in Corporate Finance</h4>
-
-<p>Economic University of Bratislava, Slovakia
-year = 2009</p>
-
-<p>MSc in Real Estate Finance&rdquo;
-IREBS - International Real Estate Business School in Regensburg, Germany
-year = 2012</p>
-
-<p>Data Scientist in R
-Data Science Career Track @ www.datacamp.com
-year = 2018</p>
+<dl>
+<dt><strong>BSc in Corporate Finance</strong></dt>
+<dd>Economic University of Bratislava</dd>
+<dd>Slovakia</dd>
+<dd>2009</dd>
+<dt><strong>MSc in Real Estate Finance</strong></dt>
+<dd>IREBS - International Real Estate Business School in Regensburg</dd>
+<dd>Germany</dd>
+<dd>2012</dd>
+<dt><strong>Data Scientist in R</strong></dt>
+<dd>Data Science Career Track @ www.datacamp.com</dd>
+<dd>2018</dd>
+</dl>
 
 <p>+++</p>
 
