--- a/public/bio/index.html
+++ b/public/bio/index.html
@@ -68,7 +68,7 @@
 
     
 
-<p>Learned a lot as a private banker during GFC, went to study real estate investment and became research &amp; strategy proffesional. Since 2016 keen learner of R programming language. I enjoy running, cooking, and music.</p>
+<p>Learned a lot as a private banker during GFC, went to study real estate investment and became research &amp; strategy professional. Since 2016 keen learner of R programming language. I enjoy running, cooking, and music.</p>
 
 <h2 id="interest">Interest</h2>
 
